--- a/trainees.html
+++ b/trainees.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Trainee Profiles | Hot Beans Web</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <nav>…same nav as index.html…</nav>
+
+  <section class="section container">
+    <h1>Meet Our Trainees</h1>
+    <div class="flex">
+      <div class="card">
+        <h2>Alice Smith</h2>
+        <p>Frontend Trainee with a love for UX design.</p>
+      </div>
+      <div class="card">
+        <h2>Bob Jones</h2>
+        <p>Backend Trainee specializing in APIs.</p>
+      </div>
+      <!-- add more as needed -->
+    </div>
+  </section>
+</body>
+</html>
 
