--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +12,7 @@
     <div class="container">
       <a href="index.html"><strong>Hot Beans Web</strong></a>
       <div>
+        <a href="index.html">Home</a>
         <a href="trainees.html">Trainees</a>
         <a href="jobs.html">Jobs</a>
         <a href="apply.html">Apply</a>
@@ -21,8 +23,22 @@
 
   <section class="section container">
     <h1>Welcome to Hot Beans Web</h1>
-    <p>At Hot Beans Web we build cutting-edge web experiences. We’re expanding our team of passionate developers who want to grow with us—and we’d love you to join!</p>
+    <p>Building cutting-edge web experiences. Join our passionate team!</p>
+    <img src="images/team.jpg" alt="Our Team Working" class="responsive">
     <a href="jobs.html" class="button">View Open Roles</a>
   </section>
+
+  <footer>
+    <div class="container">
+      <div>
+        <p>&copy; 2025 Hot Beans Web</p>
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a> |
+        <a href="#">Terms of Service</a> |
+        <a href="#">Contact Us</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
