--- a/trainees.html
+++ b/trainees.html
@@ -1,3 +1,4 @@
+<!-- trainees.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,22 +8,47 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav>…same nav as index.html…</nav>
+  <nav>
+    <div class="container">
+      <a href="index.html"><strong>Hot Beans Web</strong></a>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="trainees.html">Trainees</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="apply.html">Apply</a>
+        <a href="courses.html">Courses</a>
+      </div>
+    </div>
+  </nav>
 
   <section class="section container">
     <h1>Meet Our Trainees</h1>
     <div class="flex">
       <div class="card">
+        <img src="images/alice.jpg" alt="Alice Smith" class="responsive">
         <h2>Alice Smith</h2>
         <p>Frontend Trainee with a love for UX design.</p>
       </div>
       <div class="card">
+        <img src="images/bob.jpg" alt="Bob Jones" class="responsive">
         <h2>Bob Jones</h2>
         <p>Backend Trainee specializing in APIs.</p>
       </div>
       <!-- add more as needed -->
     </div>
   </section>
+
+  <footer>
+    <div class="container">
+      <div>
+        <p>&copy; 2025 Hot Beans Web</p>
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a> |
+        <a href="#">Terms of Service</a> |
+        <a href="#">Contact Us</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
-
