--- a/jobs.html
+++ b/jobs.html
@@ -1,3 +1,4 @@
+<!-- jobs.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +8,24 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav>…same nav…</nav>
+  <nav>
+    <div class="container">
+      <a href="index.html"><strong>Hot Beans Web</strong></a>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="trainees.html">Trainees</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="apply.html">Apply</a>
+        <a href="courses.html">Courses</a>
+      </div>
+    </div>
+  </nav>
 
   <section class="section container">
     <h1>Current Openings</h1>
     <article>
       <h2>Junior Web Developer</h2>
+      <img src="images/junior-dev.jpg" alt="Junior Developer at Work" class="responsive">
       <ul>
         <li>BTEC Level 3 or equivalent in Computing</li>
         <li>Knowledge of HTML, CSS, JavaScript</li>
@@ -22,5 +35,18 @@
     </article>
     <!-- Repeat for other roles -->
   </section>
+
+  <footer>
+    <div class="container">
+      <div>
+        <p>&copy; 2025 Hot Beans Web</p>
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a> |
+        <a href="#">Terms of Service</a> |
+        <a href="#">Contact Us</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
