--- a/courses.html
+++ b/courses.html
@@ -1,3 +1,4 @@
+<!-- courses.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,18 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <nav>…same nav…</nav>
+  <nav>
+    <div class="container">
+      <a href="index.html"><strong>Hot Beans Web</strong></a>
+      <div>
+        <a href="index.html">Home</a>
+        <a href="trainees.html">Trainees</a>
+        <a href="jobs.html">Jobs</a>
+        <a href="apply.html">Apply</a>
+        <a href="courses.html">Courses</a>
+      </div>
+    </div>
+  </nav>
 
   <section class="section container">
     <h1>Recommended Courses</h1>
@@ -18,5 +30,18 @@
       <!-- add more -->
     </ul>
   </section>
+
+  <footer>
+    <div class="container">
+      <div>
+        <p>&copy; 2025 Hot Beans Web</p>
+      </div>
+      <div>
+        <a href="#">Privacy Policy</a> |
+        <a href="#">Terms of Service</a> |
+        <a href="#">Contact Us</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
