--- a/trainees.html
+++ b/trainees.html
@@ -25,12 +25,12 @@
     <h1>Meet Our Trainees</h1>
     <div class="flex">
       <div class="card">
-        <img src="images/alice.jpg" alt="Alice Smith" class="responsive">
+        <img src="images/alice.jpg" alt="https://images.pexels.com/photos/1181703/pexels-photo-1181703.jpeg" class="responsive">
         <h2>Alice Smith</h2>
         <p>Frontend Trainee with a love for UX design.</p>
       </div>
       <div class="card">
-        <img src="images/bob.jpg" alt="Bob Jones" class="responsive">
+        <img src="https://images.pexels.com/photos/2102415/pexels-photo-2102415.jpeg" alt="Bob Jones" class="responsive">
         <h2>Bob Jones</h2>
         <p>Backend Trainee specializing in APIs.</p>
       </div>
