--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </nav>
-
+<div style="overflow:hidden;resize:none;max-width:100%;width:500px;height:500px;"><div id="embed-ded-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=great+ducie+st&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="the-googlemap-enabler" href="https://kbj9qpmy.com/bp" id="get-map-data">Internet Provider</a><style>#embed-ded-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
   <section class="section container">
     <h1>Welcome to Hot Beans Web</h1>
     <p>Building cutting-edge web experiences. Join our passionate team!</p>
